# spec_pars

./: .env  main.py  parse_instruments.py  parse_market.py  pyproject.toml  requirements.txt
user_data/: articles.txt
