[tool.poetry]
name = "spec-pars"
version = "0.1.0"
description = ""
authors = ["Kuj1 <the.same.dentist@gmail.com>"]
readme = "README.md"
packages = [{include = "spec_pars"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
selenium = "^4.7.0"
undetected-chromedriver = "^3.1.7"
bs4 = "^0.0.1"
dotenv = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
